Fix overflowing logos

--- a/src/components/partners-list/partners-list.less
+++ b/src/components/partners-list/partners-list.less
@@ -4,7 +4,6 @@
 
     &__item {
         display: flex;
-        align-items: center;
         justify-content: center;
         width: 50%;
         height: 8rem;
@@ -22,6 +21,8 @@
 
     &__company-logo {
         width: 100%;
-        height: auto;
+        max-width: 15rem;
+        height: 100%;
+        object-fit: contain;
     }
 }
